syntax = "proto3";
package uz.edm.grpc.authentication;

option java_outer_classname = "AuthenticationProto";
option java_multiple_files = true;

service AuthenticationService {
  rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}
