syntax = "proto3";
import "google/protobuf/empty.proto";
package uz.edm.grpc.employee;

option java_outer_classname = "EmployeeProto";
option java_multiple_files = true;

service EmployeeService {
  rpc GetEmployeeByEmployeeCode (GetEmployeeByEmployeeCodeRequest) returns (Employee);
  rpc GetAllEmployees (google.protobuf.Empty) returns (Employees);
  rpc GeteEmployeeByEmail (GetEmployeeByEmailRequest) returns (Employee);
  rpc UpdateEmployee (UpdateEmployeeRequest) returns (Employee);
  rpc CreateEmployee (CreateEmployeeRequest) returns (Employee);
  rpc DeleteEmployee (DeleteEmployeeRequest) returns (google.protobuf.Empty);
}

message GetEmployeeByEmployeeCodeRequest {
  string employeeCode = 1;
}

message UpdateEmployeeRequest {
  string employeeCode = 1;
  Employee employee = 2;
}

message CreateEmployeeRequest {
  Employee employee = 1;
}

message DeleteEmployeeRequest {
  string id = 1;
}

message GetEmployeeByEmailRequest {
  string email = 1;
}

message Employee {
  string firstName = 1;
  string lastName = 2;
  string address = 3;
  string phoneNumber = 4;
  string email = 5;
  string birthday = 6;
  string role = 7;
  string password = 8;
  string employeeCode = 9;
}

message Employees {
  repeated Employee employee = 1;
}